[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eco_track"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
description = "Eco Track Asset Management"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/eco_track"
