[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eco_track"
authors = [{name = "Developer"}]
description = "ESG and Carbon Footprint Tracking for ERPNext"
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hemantasaldekar-coder/eco_track"
